# python-pg_bigm

./: .gitignore  pyproject.toml  requirements.txt
migrations/: env.py  script.py.mako
migrations/versions/: 4241ef38d9ca_create_table_movies.py
src/: main.py
src/config/: database.py
src/controller/: movie_controller.py
src/entity/: movie.py
src/helper/: transformer.py
src/model/: api_response.py
src/python_pg_bigm/: main.py
src/python_pg_bigm/controller/: llm_controller.py  movie_controller.py
src/python_pg_bigm/model/: create_movie_request.py  query_llm_request.py
src/python_pg_bigm/repository/: movie_repository.py
src/python_pg_bigm/service/: llm_service.py  movie_service.py
src/repository/: movie_repository.py
src/service/: movie_service.py
