[project]
name = "python_pg_bigm"
version = "0.1.0"
description = ""
authors = [
    { name = "Muhamad Azizi", email = "muhamadazizi177@yahoo.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.2,<0.117.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "chromadb (>=1.1.0,<2.0.0)"
]


[tool.poetry]
packages = [{ include = "python_pg_bigm", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "alembic (>=1.16.5,<2.0.0)"
]
